@@ -1,3 +1,12 @@
+Tue, 01 Jan 2008 23:32:50 +0100 <thp@perli.net>
+Add download completion notification support
+
+	* src/gpodder/download.py: Notify the download status manager when a
+	download has been completed successfully
+	* src/gpodder/services.py: Add download-complete signal to list of
+	possible signals and download_completed() method to be used by
+	downloads to notify the status manager of a successful download
+
 Sat, 29 Dec 2007 14:21:51 +0100 <thp@perli.net>
 Patch the feedparser module to correctly process democracynow.org
 
